# findag

./: .env.staging  .gitattributes  .gitignore  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_TODO.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_UPDATE_COMPLETE.md  Dockerfile  Dockerfile.test  FRONTEND_INTEGRATION_TODO.md  GO_LIVE_COMPLETE.md  HOME_NETWORK_SETUP.md  INFRASTRUCTURE_SUMMARY.md  LICENSE.md  NODE_API_SPEC.md  PRODUCTION_ANALYSIS_SUMMARY.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_TODO.md  PROJECT_COMPLETION_SUMMARY.md  README.md  ROADMAP.md  TESTPLAN.md  WALLET_README.md  WALLET_USAGE_EXAMPLES.md  benchmark_results.json  check_balances.rs  comprehensive_performance_report.json  deploy-automated.ps1  deploy-automated.sh  deploy-home-network.sh  deploy-london.sh  deploy-ny.sh  docker-compose.yml  fund_accounts.sh  initialize-genesis.ps1  monitor-testnet.ps1  multi_node.sh  run-2-node-demo.ps1  run-multi-node-demo.ps1  (+14 more)
.cargo/: config.toml
.github/: dependabot.yml
configs/: database.toml  production.toml  security.toml
default.sled/: conf  snap.00000000008DD6D9
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: ADMIN_TRAINING.md  ARCHITECTURE_OVERVIEW.md  BRIDGE_OVERVIEW.md  CI_CD_PIPELINE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_UPDATE_SUMMARY.md  FAQ.md  FX_Settlement_Flow.md  INCIDENT_RESPONSE.md  INFRASTRUCTURE_DEPLOYMENT.md  OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_SUMMARY.md  ROUNDCHAIN_IMPLEMENTATION.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDES.md  ai_debug_guide.md  ai_debugging.md  api_reference.md  bridge_integration.md  community_announcement_template.md  dev_sdk_overview.md  implementation_guide.md  institutional_transparency.md  pilot_feedback_form.md  pilot_launch_checklist.md  pilot_onboarding_email.md  pilot_quickstart.md  production_readiness.md  quorum_rotation_design.md  sharding_design.md
findag-tauri/: .eslintrc.js  Cargo.toml  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  TODO.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
findag-tauri/docs/: ARCHITECTURE_OVERVIEW.md  DEVELOPER_ONBOARDING.md  PRD_UPDATE.md
findag-tauri/scripts/: build-production.ps1  build-production.sh  setup.sh
findag-tauri/src/: App.tsx  setupTests.ts
findag-tauri/src-tauri/: Cargo.toml  tauri.conf.json  updater.rs
findag-tauri/src-tauri/findag-api/: Cargo.toml
findag-tauri/src-tauri/findag-api/src/: errors.rs  handlers.rs  lib.rs  metrics.rs  middleware.rs  models.rs  routes.rs  server.rs  websocket.rs
findag-tauri/src-tauri/findag-consensus/: Cargo.toml
findag-tauri/src-tauri/findag-consensus/src/: finalization.rs  lib.rs  mempool.rs  metrics.rs  roundchain.rs  validator.rs
findag-tauri/src-tauri/findag-core/: Cargo.toml
findag-tauri/src-tauri/findag-core/src/: address.rs  lib.rs  types.rs
findag-tauri/src-tauri/findag-dagtimer/: Cargo.toml
findag-tauri/src-tauri/findag-dagtimer/src/: errors.rs  hashtimer.rs  lib.rs  metrics.rs  synchronization.rs  time_manager.rs
findag-tauri/src-tauri/findag-network/: Cargo.toml
findag-tauri/src-tauri/findag-network/src/: discovery.rs  gossipsub.rs  kad.rs  lib.rs  metrics.rs  protocol.rs  swarm.rs  transport.rs
findag-tauri/src-tauri/findag-security/: Cargo.toml
findag-tauri/src-tauri/findag-security/src/: auth.rs  encryption.rs  jwt.rs  keys.rs  lib.rs  password.rs
findag-tauri/src-tauri/findag-storage/: Cargo.toml
findag-tauri/src-tauri/findag-storage/src/: assets.rs  blocks.rs  database.rs  governance.rs  lib.rs  metrics.rs  rounds.rs  transactions.rs  validators.rs  wallets.rs
findag-tauri/src-tauri/findag-types/: Cargo.toml
findag-tauri/src-tauri/findag-types/src/: blockchain.rs  consensus.rs  lib.rs  network.rs  trading.rs  wallet.rs
findag-tauri/src-tauri/src/: main.rs
findag-tauri/src/components/Charts/: AdvancedChart.tsx  ChartAnnotations.tsx  ChartPage.tsx  DAGVisualizer.tsx
findag-tauri/src/components/Charts/__tests__/: AdvancedChart.test.tsx
findag-tauri/src/components/Common/: AdvancedForm.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  NotificationSystem.tsx
findag-tauri/src/components/Common/__tests__/: LoadingSpinner.test.tsx
findag-tauri/src/components/Compliance/: ComplianceDashboard.tsx
findag-tauri/src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
findag-tauri/src/components/Monitoring/: ApplicationMonitor.tsx
findag-tauri/src/components/Security/: AuditLogger.tsx  AuthProvider.tsx  DataEncryption.tsx  RoleBasedRoute.tsx
findag-tauri/src/components/Security/__tests__/: AuthProvider.test.tsx
findag-tauri/src/contexts/: AuthContext.tsx  NodeContext.tsx  ThemeContext.tsx  TradingContext.tsx  WalletContext.tsx
findag-tauri/src/pages/Auth/: Login.tsx  Register.tsx
findag-tauri/src/pages/DAGExplorer/: DAGExplorer.tsx
findag-tauri/src/pages/Dashboard/: Dashboard.tsx
findag-tauri/src/pages/Logs/: Logs.tsx
findag-tauri/src/pages/Network/: Network.tsx
findag-tauri/src/pages/Settings/: Settings.tsx
findag-tauri/src/pages/Trading/: Trading.tsx
findag-tauri/src/pages/Validators/: Validators.tsx
findag-tauri/src/pages/Wallet/: Wallet.tsx
findag-tauri/src/services/: api.ts
findag-tauri/src/services/__tests__/: api.test.ts
findag-tauri/src/styles/: globals.css
findag-ui/: .gitignore  ACCESSIBILITY_FEATURES_SUMMARY.md  ADVANCED_TRADING_FEATURES_SUMMARY.md  CHART_ENHANCEMENTS_SUMMARY.md  CUSTOMIZABLE_DASHBOARD_SUMMARY.md  DATA_PAGINATION_SUMMARY.md  ENHANCED_DAG_SUMMARY.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  FRONTEND_INTEGRATION_TODO.md  GUI_PROGRESS_SUMMARY.md  GUI_TODO.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  REAL_DATA_SETUP.md  REAL_TIME_NOTIFICATIONS_SUMMARY.md  TIMEZONE_HANDLING_SUMMARY.md  env.example  index.html  jest.config.js  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js
frontend/: package-lock.json  package.json
fuzz/: Cargo.toml
helm/: Chart.yaml  README.md  values.yaml
k8s/: configmap.yml  deployment.yml  hpa.yml  namespace.yml  pvc.yml  (+2 more)
(+381 files in other folders)
