[package]
name = "findag-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "mdns", "floodsub", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = "2.0"
rand = "0.8"
blake3 = "1.0"
hex = "0.4"
base64 = "0.21"
ring = "0.17"
sled = "0.34"
bincode = "1.3"
warp = "0.3"
tempfile = "3.8"
regex = "1.9"
aes-gcm = "0.10"
typenum = "1.17"
sha2 = "0.10"
ripemd = "0.1.3"
base58 = "0.2.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
generic-array = "0.14"
lazy_static = "1.4"
