[package]
name = "findag"
version = "0.1.0"
edition = "2021"

[lib]
name = "findag"
path = "src/lib.rs"

[[bin]]
name = "findag"
path = "src/main.rs"

[[bin]]
name = "encrypted_wallet"
path = "src/bin/encrypted_wallet.rs"

[[bin]]
name = "findag_wallet"
path = "src/bin/findag_wallet.rs"

[[bin]]
name = "handle_wallet"
path = "src/bin/handle_wallet.rs"

[[bin]]
name = "transaction_bot"
path = "src/bin/transaction_bot.rs"

[[bin]]
name = "fund_accounts"
path = "src/bin/fund_accounts.rs"

[[bin]]
name = "send_valid_txs"
path = "src/bin/send_valid_txs.rs"

[[bin]]
name = "check_balances"
path = "check_balances.rs"

[[bin]]
name = "test_bot"
path = "src/bin/test_bot.rs"

[[bin]]
name = "test_bot_address"
path = "test_bot_address.rs"

[[bin]]
name = "tx_analyzer"
path = "src/bin/tx_analyzer.rs"

[[bin]]
name = "network_tap"
path = "src/bin/network_tap.rs"

[[bin]]
name = "roundchain_example"
path = "src/bin/roundchain_example.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "1.9"
rand = "0.7"
rand_core = "0.5"
ed25519-dalek = { version = "1.0", features = ["serde"] }
curve25519-dalek = "3.2"
x25519-dalek = "1.0"
chacha20poly1305 = "0.10"
bincode = "1.3"
sha2 = "0.9"
bech32 = "0.9"
sled = "0.34"
hex = "0.4"
libp2p = { version = "0.53", features = ["macros", "gossipsub", "mdns", "kad", "noise", "tcp", "yamux", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
libp2p-gossipsub = "0.46"
libp2p-mdns = { version = "0.45", features = ["tokio"] }
libp2p-kad = "0.45"
libp2p-noise = "0.44"
prometheus = "0.13"
lazy_static = "1.4"
libp2p-identity = "0.2.8"
threadpool = "1.8"
tower-http = { version = "0.5", features = ["cors", "limit", "fs", "trace"] }
# Wallet encryption dependencies
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7.3"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
anyhow = "1.0"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
jsonwebtoken = "9.3"
once_cell = "1.19"
tokio-rustls = "0.25"
metrics = "0.22"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8" 