[workspace]
members = [
    "src-tauri",
    "src-tauri/findag-core",
    "src-tauri/findag-consensus",
    "src-tauri/findag-network",
    "src-tauri/findag-storage",
    "src-tauri/findag-security",
    "src-tauri/findag-api",
    "src-tauri/findag-dagtimer",
    "src-tauri/findag-types"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FinDAG Team <team@findag.io>"]
description = "Institutional-grade permissioned blockchain for financial applications"
license = "MIT"
repository = "https://github.com/findag/findag-tauri"
keywords = ["blockchain", "financial", "consensus", "dag", "roundchain"]
categories = ["blockchain", "financial"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2 = "0.10"
sled = { version = "0.34", features = ["compression"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.14"
lazy_static = "1.4"
threadpool = "1.8"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
anyhow = "1.0"
jsonwebtoken = "9.3"
once_cell = "1.19"
metrics = "0.22"
tracing = "0.1"
toml = "0.8"
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
futures = "0.3"
otpauth = "0.5.1"
base32 = "0.4"
tower = { version = "0.4", features = ["load"] }
axum = { version = "0.7", features = ["macros", "ws"] }
fastrand = "1.9"
rand = "0.8"
rand_core = "0.6"
curve25519-dalek = "4.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
bincode = "1.3"
bech32 = "0.9"
libp2p = { version = "0.53", features = ["macros", "gossipsub", "mdns", "kad", "noise", "tcp", "yamux", "tokio"] }
libp2p-gossipsub = "0.46"
libp2p-mdns = { version = "0.45", features = ["tokio"] }
libp2p-kad = "0.45"
libp2p-noise = "0.44"
libp2p-identity = "0.2.8"
zeroize = "1.7"
tower-http = { version = "0.5", features = ["cors", "limit", "fs", "trace"] }
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7.3"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio-rustls = "0.24"
tokio-stream = "0.1"

[workspace.dev-dependencies]
tempfile = "3.8" 