[package]
name = "findag-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true



[dependencies]
# Tauri dependencies
tauri = "2"
tauri-build = "2"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

# FinDAG core dependencies
findag-core = { path = "findag-core" }
findag-types = { path = "findag-types" }
findag-consensus = { path = "findag-consensus" }
findag-network = { path = "findag-network" }
findag-storage = { path = "findag-storage" }
findag-security = { path = "findag-security" }
findag-api = { path = "findag-api" }
findag-dagtimer = { path = "findag-dagtimer" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
sled.workspace = true
hex.workspace = true
chrono.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
threadpool.workspace = true
clap.workspace = true
reqwest.workspace = true
base64.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
metrics.workspace = true
tracing.workspace = true
toml.workspace = true
num_cpus.workspace = true
uuid.workspace = true
thiserror.workspace = true
futures.workspace = true
otpauth.workspace = true
base32.workspace = true
tower.workspace = true
axum.workspace = true
fastrand.workspace = true
rand.workspace = true
rand_core.workspace = true
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
bincode.workspace = true
bech32.workspace = true
libp2p.workspace = true
libp2p-gossipsub.workspace = true
libp2p-mdns.workspace = true
libp2p-kad.workspace = true
libp2p-noise.workspace = true
libp2p-identity.workspace = true
tower-http.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
rpassword.workspace = true
axum-extra.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true

# Additional desktop-specific dependencies
notify = "6.1"
dirs = "5.0"
config = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"
env_logger = "0.10"
sysinfo = { version = "0.29", features = ["apple-app-store"] }
native-dialog = "0.6"
window-shadows = "0.2"
window-vibrancy = "0.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
