[package]
name = "findag-dagtimer"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "FinDAG Time and HashTimer Implementation"
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "time", "hashtimer", "findag", "consensus"]
categories = ["algorithms", "cryptography", "data-structures"]

[dependencies]
# FinDAG dependencies
findag-core = { path = "../findag-core" }
findag-types = { path = "../findag-types" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
chrono.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
threadpool.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
once_cell.workspace = true
metrics.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
bincode.workspace = true
uuid.workspace = true
rand.workspace = true
rand_core.workspace = true
fastrand.workspace = true
libp2p.workspace = true
libp2p-gossipsub.workspace = true
libp2p-mdns.workspace = true
libp2p-kad.workspace = true
libp2p-noise.workspace = true
libp2p-identity.workspace = true
tower.workspace = true
axum.workspace = true
tower-http.workspace = true 