[package]
name = "findag-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "FinDAG common type definitions"
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "types", "findag"]
categories = ["algorithms", "cryptography", "database"]

[dependencies]
# FinDAG dependencies
findag-core = { path = "../findag-core" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
bincode.workspace = true
hex.workspace = true
bech32.workspace = true 